- Basic infraestracture to solve the the exam  - Polling repo update every 15sec, logs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".service.UpdateBitcoinChartService"
+            android:enabled="true" />
+
     </application>
 
 </manifest>
