- show values using live data and data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
 }
 
 dependencies {
